--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ h3 {
 /* header */
 
 #masthead {
-  position: fixed;
+  position: static;
   z-index: 99;
   width: 100%;
   margin: 0 0 30px;
@@ -99,6 +99,7 @@ nav a:first-child {
 /* footer */
 
 footer {
+  position: sticky;
   padding: 30px 0;
   clear: both;
   font-size: 12px;
@@ -237,3 +238,17 @@ input[type=submit] {
   background: #4aaaa5;
   border: 0 none;
 }
+
+@media screen (max-width: 980px) {
+}
+
+@media screen (max-width: 768px) {
+}
+
+
+@media screen (max-width: 640px) {
+}
+
+
+
+
