--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ h3 {
   position: static;
   z-index: 99;
   width: 100%;
-  margin: 0 0 30px;
+  margin: 0 0 -50px;
   overflow: auto;
   color: #fff;
   background: #fff;
@@ -241,13 +241,66 @@ input[type=submit] {
 
 @media screen (min-width: 520px) and (max-width: 640px) {
 
+
 }
 
 @media screen (min-width: 641px) and (max-width: 768px) {
+ {
+   background-color: red !important;
+}
+.sidebar {
+float: right;
+width: 100%;
+max-width: 768px;
+padding: 30px;
+margin-bottom: 20px;
+background: #fff;
+border: 1px solid #ddd;
+}
+h3, .sidebar h2 {
+width: 700px;
+padding-bottom: 20px;
+margin-bottom: 15px;
+line-height: 22px;
+border-bottom: 2px solid #eee;
+text-align: center;
+}
+#connect {
+text-align: center;
+}
+
+#logo {
+float: left;
+width: 768px;
+height: 90px;
+font-family: Georgia, Times, "Times New Roman", serif;
+font-size: 50px;
+font-weight: 700;
+line-height: 100px;
+color: #fff;
+text-align: center;
+text-decoration: none;
+background: #4aaaa5;
+}
+nav {
+width: 567px;
+float: right;
+margin-top: 25px;
+font-size: 25px;
+padding-bottom: 15px;
+}
+.auth-image {
+float: left;
+width: 700px;
+height: auto;
+margin-top: 10px;
+margin-right: 20px;
+}
 
 }
 
-@media screen (max-width: 960px) {
+@media screen (min-width: 769px) and ( max-width: 980px) {
+
   
 }
 
