--- a/css/style.css
+++ b/css/style.css
@@ -250,6 +250,11 @@ margin-bottom: 20px;
 background: #fff;
 border: 1px solid #ddd;
 }
+
+#mastheader {
+  width: 200%
+}
+
 h3, .sidebar h2 {
 width: 580px;
 padding-bottom: 20px;
@@ -287,7 +292,7 @@ padding-bottom: 20px;
 }
 .auth-image {
 float: left;
-width: 520px;
+width: 255px;
 height: auto;
 margin-top: 10px;
 margin-right: 40px;
@@ -341,7 +346,15 @@ border: 1px solid #ddd;
 
 @media screen and (min-width: 769px) and ( max-width: 980px) {
 
-  
+#main-container {
+padding-top: 130px;
+}
+.container {
+width: 100%;
+max-width: 960px;
+margin: 0 auto;
+clear: both;
 }
 
 
+}
